
 * Classes tab notes doesn't display data

 * Error on runtime filter apply on a process

 * Relation filter configuration not displayed on class and process grid's advanced filter

 * ReferenceFields not corretly managed inside widget workflow window

 * Advanced filter runtime with parameter not correctly managed





CMDBuild 2.4.2 (released 2016/10/18)


NEW FEATURES

 * "Show language choice" configuration not readed at login page

 * Advanced filters management from REST web services

 * Notification of errors by email

 * Performance improvements to queries

 * Preselection of workflow activities

 * Simple filter support for processes routes

 * Client performance improvements

 * Metadata for functions through REST interface

 * Added Greek translation

 * Management of geometric attributes through REST API

 * Management of relation attributes through SOAP API

 * Information about the filter of the nodes of domain trees through REST API

 * To field no more required in create/edit email tab window

 * GIS thematisms: puntual and range thematic analysis

 * GIS performance's improvements

 * Printing of relation graph


FIXES

 * Software version string visually displayed in half on login panel

 * Selected tab reset on class change in administration Classes module

 * Classes geographical attributes tab no zoom levels validation

 * Selected tab reset on accordion selection change in administration modules

 * UI not loading on Tomcat 8.0.36 (latest)

 * Double email delete server call on create/edit window close

 * CreateModifyCard widget with null Reference cannot be configured

 * History tab rows doesn't display relation attributes

 * Error when trying to get cards from a superclass when there are row privileges defined on a subclass

 * Wrong selection when accessing closed processes from URL

 * Task manager UI behavior errors

 * "Privileged" status for user invalidates "impersonate" operation of WorkflowAPI
